--- a/src/components/chessboard.css
+++ b/src/components/chessboard.css
@@ -1,5 +1,20 @@
 #chessboard {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
     width: 800px;
     height: 800px;
+    background-color: #7446df;
+}
+
+.tile{
+    width: 100px;
+    height: 100px;
+}
+
+.black-tile{
     background-color: #779556;
+}
+
+.white-tile {
+    background-color: #ebecd0;
 }
